Added full stack

--- a/Source/COFRSCoreInstaller/UserInputFullStack.resx
+++ b/Source/COFRSCoreInstaller/UserInputFullStack.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="_InstructionsLabel.Text" xml:space="preserve">
-    <value>Select the database and table that contains the resource/entity combination you wish to create a controller for. This will select the Entity and Resource models in the dropdowns provided if they exist. Both entity and resource models must exist to generate a controller. Then press OK to generate the controller.</value>
+    <value>Select the database and table that contains the resource/entity combination you wish to create a controller for. Verify that the Singular and Plural names are appropriate (change them if they are not). Then press OK to generate the files. This will generate the entity model, the resource model, the mapping between them, an example model, and a validator class along with the controller. </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
