--- a/Source/COFRSCoreCommandsPackage/Forms/MapEditor.resx
+++ b/Source/COFRSCoreCommandsPackage/Forms/MapEditor.resx
@@ -117,23 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="110" xml:space="preserve">
-    <value>COFRSMainMenu Extension</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ico128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\ico128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="112" xml:space="preserve">
-    <value>COFRSMainMenu Visual Studio Extension Detailed Info</value>
-  </data>
-  <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\COFRSMainMenuPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="EditButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\EditButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="COFRS" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\COFRS.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="label4.Text" xml:space="preserve">
+    <value>In this dialog, you can define which source columns are used to construct the destination column. You can also specify the mapping function, which takes the source columns and generates the destination column from them. The mapping function can be any C# compatible inline code.</value>
   </data>
 </root>
